Updated icons and some events.

--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -9,6 +9,7 @@
  special_doctrine_hellenic_name:0 "Hellenistic Syncretism"
  special_doctrine_hellenic_desc:0 "Syncretism was common during the Hellenistic period, with rulers regularly identifying local deities in various parts of their domains with the relevant god or goddess of the Greek Pantheon as a means of increasing the cohesion of their kingdom."
  doctrine_parameter_hostility_override_special_doctrine_hellenic:0 "Other Hellenistic [faiths|E] with the $special_doctrine_hellenic_name$ doctrine are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of [GetHostilityLevelName( '(int32)3' )|V]"
+ judgement_doctrine_conversion_resistance:0 "County Conversion Resistance: #P +30%#!"
  
  doctrine_christian_orientation_name:0 "Orientation"
  doctrine_christian_orientation_desc:0 "The question of who is the spiritual leader of the Christian community is an essential one."
@@ -100,7 +101,7 @@
  divine_marriage_doctrine_desc:0 "The blood of the divine runs through the veins of our kings and queens. Keeping our bloodlines pure is the best way to ensure our family's reign continues for centuries to come."
  gnosticism_doctrine_name:0 "Gnosticism"
  gnosticism_doctrine_desc:0 "Through knowledge, the divine spark that rests inside all humans may be liberated and returned to its heavenly source in the spirit-realm."
- doctrine_parameter_hostility_override_tenet_gnosticism:1 "Considers other Gnostic [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of $hostility_hostile_tooltippable$ or $hostility_evil_tooltippable$"
+ doctrine_parameter_hostility_override_gnosticism_doctrine:1 "Considers other Gnostic [faiths|E] to be [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of $hostility_hostile_tooltippable$ or $hostility_evil_tooltippable$"
  # New Doctrine groups
  doctrine_cultural_identity_name:0 "Cross-Cultural Disposition"
  doctrine_cultural_identity_desc:0 "How strongly is our faith tied to our culture is a very important question."
@@ -117,16 +118,18 @@
  leaving_the_cycle_doctrine_name:0 "End of the Cycle"
  leaving_the_cycle_doctrine_desc:0 "Each of us have lived many lives before, all of us bringing us closer to the end of the cycle. Every death is either a rebirth, or, if we're prepared, the End of the Cycle."
  judgement_doctrine_name:0 "Divine Judgement"
- judgement_doctrine_desc:0 "Whenever someone dies, they are judged by the divines for the sins, good deeds, vices and virtues - those who were good and virtuous are sent to Heaven to be in divine custody for eternity, those who were wicked and sinful are sent to Hell to suffer for an eternity."
+ judgement_doctrine_desc:0 "Whenever someone dies, they are judged by the divine for the sins, good deeds, vices and virtues - those who were good and virtuous are sent to Heaven to be in divine custody for eternity, those who were wicked and sinful are sent to Hell to suffer for an eternity."
  mercy_of_gods_doctrine_name:0 "Divine Mercy"
- mercy_of_gods_doctrine_desc:0 "Whenever someone dies, they are judged by the divines for their sins, good deeds, vices and virtues - but mankind is inherently sinful, so only through unearned divine grace, may we find salvation."
+ mercy_of_gods_doctrine_desc:0 "Whenever someone dies, they are judged by the divine for their sins, good deeds, vices and virtues - but mankind is inherently sinful, so only through unearned divine grace, may we find salvation."
  eternal_feast_doctrine_name:0 "Eternal Feast"
  eternal_feast_doctrine_desc:0 "Those who have lived a good life and died like heroes are to spend an eternity feasting as a result - on the other hand, those who did not..."
+ underworld_doctrine_name:0 "Underworld"
+ underworld_doctrine_desc:0 "Darkness awaits us all after death - a dark cavern, where we meet all our loved ones and spend an eternity together."
  final_death_doctrine_name:0 "Oblivion"
  final_death_doctrine_desc:0 "There is nothing after death - only silence, blackness and oblivion."
  spirit_realms_doctrine_name:0 "The Picking of the Valkyries"
- spirit_realms_doctrine_desc:0 "???" 
- spirit_remainder_name:0 "Bound to the Land"
+ spirit_realms_doctrine_desc:0 ""Those who have lived a good life and died like heroes are to spend an eternity feasting in the highest of heavens - on the other hand, those who did not are relegated to different kinds of spirit realms..." 
+ spirit_remainder_doctrine_name:0 "Bound to the Land"
  spirit_remainder_doctrine_desc:0 "Our bodies may die and decay, but our spirits will never leave this world, and will continue to the land until the name of times."
  doctrine_final_disposition_name:0 "Final Resting Place" 
  doctrine_final_disposition_desc:0 "Every defines a set of funeral rites and practices, prescribing what to do with the dead, and how to go on about it."
@@ -142,6 +145,7 @@
  cremation_doctrine_desc:0 "The dead should not be imprisoned underground — it is far better to burn the body in a dignified manner, releasing their spirit into the afterlife."
  embalming_doctrine_name:0 "Embalming"
  embalming_doctrine_desc:0 "The dead deserve better than the pyre, the stomach of scavanging birds or the earthworms - the only proper way to pay respects to our dead is to preserve their bodies, so that their descendants may lay their eyes on their ancestors, and honour them accordingly."
+ doctrine_mummification_active:2 "[rulers|E] can give their recently-deceased ancestors, gaining [prestige|E] and pleasing their [vassals|E]"
  doctrine_ascetism_hedonism_name:0 "Asceticism vs Hedonism"
  doctrine_ascetism_hedonism_desc:0 "Did the devine wish for us to enjoy the world that was created for us, or were we intended to shut ourselves off from the pursuit of material needs to focus on more important matters?"
  asceticism_doctrine_name:0 "Asceticism"
@@ -150,4 +154,5 @@
  moderation_doctrine_desc:0 "The divine wishes not for us to needlessly suffer, but neither should we go to the other extreme in the blind pursuit of hedonism. It is the divine will that we seek the golden middle-ground."
  hedonism_doctrine_name:0 "Hedonism"
  hedonism_doctrine_desc:0 "The divine filled this world with a bounty of pleasures for us to indulge in and enjoy — to not partake of such things is to snub the very work of creation itself."
- # New 
+ COURT_CHAPLAIN_CONVERSION_JUDGEMENT_MODIFIER:0 "[county.GetProvince.GetCounty.GetFaith.GetName] — [GetFaithDoctrine('judgement_doctrine').GetBaseName]"
+
