Added Mazdaic syncretism.

--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english: 
+ rf_mazdan:0 "Mazdaic"
  turan_tolerance_name:0 "Turanian Brotherhood"
  turan_tolerance_desc:0 "We may have dispersed into many far away lands since time immemorial, we still won't forget about our ancient blood ties."
  special_doctrine_turan_name:0 "Turanian Syncretism"
@@ -75,8 +76,12 @@
  doctrine_syncretism_desc:0 "Do we keep to ourselves, or do we open ourselves up for dialogue with the heathens?"
  no_syncretism_doctrine_name:0 "No Syncretism"
  no_syncretism_doctrine_desc:0 "Our faith is the one true faith in the universe, and there is nothing to be learned from heathens, whose existence we merely tolerate at best."
- eastern_syncretism_doctrine_name:0 "Eastern Syncretism"
- eastern_syncretism_doctrine_desc:0 "There is something to be learned from the way the different eastern religions tolerate each other. They may not follow the true faith, but that does not make them evil."
+ eastern_syncretism_doctrine_name:0 "Dharmic Syncretism"
+ eastern_syncretism_doctrine_desc:0 "There is something to be learned from the way the different eastern Dharmic religions tolerate each other. They may not follow the true faith, but that does not make them evil."
+ doctrine_parameter_eastern_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $eastern_syncretism_doctrine_name$ [doctrine|E]"
+ mazdaic_syncretism_doctrine_name:0 "Mazdaic Syncretism"
+ mazdaic_syncretism_doctrine_desc:0 "The Prophet Zoroaster's words are indisputably wise and just, and whatever our other doubts, we should take heed of his thoughts and deeds."
+ doctrine_parameter_mazdaic_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $mazdaic_syncretism_doctrine_name$ [doctrine|E]"
  pagan_syncretism_doctrine_name:0 "Syncretic Folk Traditions"
  pagan_syncretism_doctrine_desc:0 "Who are we to tell others that their traditions are untrue? It is not our place to lecture them about customs they have practiced for centuries: instead, we should learn quietly about their ways."
  doctrine_parameter_unreformed_syncretic_actor_opinion_active:2 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [GetFaithDoctrine('unreformed_faith_doctrine').GetBaseName] [faiths|E]"
@@ -86,7 +91,7 @@
  christian_syncretism_doctrine_desc:0 "Jesus of Nazareth may not have been true divinity, but he was still an upstanding and virtuous figure. We should honor and respect his teachings."
  doctrine_parameter_christian_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $christian_syncretism_doctrine_name$ [doctrine|E]"
  muslim_syncretism_doctrine_name:0 "Islamic Syncretism"
- muslim_syncretism_doctrine_desc:0 "The Prophet's words are indisputably wise and just, and whatever our other doubts, we should take heed of his thoughts and deeds."
+ muslim_syncretism_doctrine_desc:0 "The Prophet Muhammad's words are indisputably wise and just, and whatever our other doubts, we should take heed of his thoughts and deeds."
  doctrine_parameter_islamic_syncretic_recipient_opinion_active:1 "Mutual [EmptyScope.ScriptValue('syncretic_mutual_opinion_bonus_value')|=+0] [opinion|E] bonus with [faiths|E] that have the $muslim_syncretism_doctrine_name$ [doctrine|E]"
  jewish_syncretism_doctrine_name:0 "Jewish Syncretism"
  jewish_syncretism_doctrine_desc:0 "Though we do not agree with its claims about God's chosen people, the wisdom of the Jewish Torah is undeniable, and there is much to be learned from the text."
@@ -155,4 +160,15 @@
  hedonism_doctrine_name:0 "Hedonism"
  hedonism_doctrine_desc:0 "The divine filled this world with a bounty of pleasures for us to indulge in and enjoy — to not partake of such things is to snub the very work of creation itself."
  COURT_CHAPLAIN_CONVERSION_JUDGEMENT_MODIFIER:0 "[county.GetProvince.GetCounty.GetFaith.GetName] — [GetFaithDoctrine('judgement_doctrine').GetBaseName]"
+ tenet_prosperity_gospel_name:0 "Gospel of Prosperity"
+ tenet_prosperity_gospel_desc:0 "Why wait for afterlife, when through hard work, we can build heaven on this very Earth too? Through hard work, we gain prosperity, through prosperity, we build a closer relationship with the divine."
+ 
+ special_doctrine_is_mazdaic_faith_name:0 "Teachings of Zoroaster"
+ is_mazdaic_faith_name:0 "$special_doctrine_is_mazdaic_faith_name$"
+ special_doctrine_is_mazdaic_faith_desc:0 "Not all in this world are servants of the evil Angra Mainyu - there are some in this world who seek the enlightenment of Ahura Mazda, and we should show some compassion towards the more virtuous of the unclean peoples."
+ doctrine_parameter_hostility_override_tenet_mazdaic_syncretism:2 "Non-Mazdaic [faiths|E] with the $tenet_mazdaic_syncretism_name$ tenet are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of $hostility_evil_tooltippable$"
+ special_doctrine_is_dharmic_faith_name:0 "Dharma"
+ is_dharmic_faith_name:0 "$special_doctrine_is_dharmic_faith_name$"
+ special_doctrine_is_dharmic_faith_desc:0 "Not all on this Earth are lucky enough to be as enlightened as we are, knowing what is and isn't in accordance to the will of the divine. However, some are seeking to gain enlightenment and understand how to act in accordance to dharma - we should guide these souls to proper enlightenment."
+ doctrine_parameter_hostility_override_tenet_eastern_syncretism:2 "Non-Eastern [faiths|E] with the $tenet_eastern_syncretism_name$ tenet are considered [GetHostilityLevelName( FAITH_DOCTRINE_PARAMETER.GetIntValue )|V] instead of $hostility_evil_tooltippable$"
 
