Added new Christian denominations.

--- a/localization/english/religion/far_eastern_holy_sites_l_english.yml
+++ b/localization/english/religion/far_eastern_holy_sites_l_english.yml
@@ -3,3 +3,9 @@
  holy_site_maldives_name: "Maldivia"
  holy_site_dakhina_desa_name: "Dakhina Desa"
  holy_site_ras_hafun_name: "Ras Hafun"
+ holy_site_prague_name: "Prague"
+ holy_site_fenny_drayton_name: "Drayton-in-the-Clay"
+ holy_site_geneva_name: "Geneva"
+ holy_site_wittenberg_name: "Wittenberg"
+ holy_site_stockholm_name: "Stockholm"
+ holy_site_olomouc_name: "Olomouc"
