Removed culture groups, replacing them with heritages in scripts + added Gypsy Heritage.

--- a/localization/english/culture/traditions/eastern_heritages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_heritages_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ heritage_gypsy_name:0 "Romani"
+ heritage_gypsy_collective_noun:0 "Romani"
  heritage_japanese_name:0 "Japanese"
  heritage_japanese_collective_noun:0 "Japanese"
  heritage_ainu_name:0 "Japanese"
