--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ language_west_iranian_name:0 "Western Iranian"
+ language_east_iranian_name:0 "Eastern Iranian"
  language_japanese_name:0 "Japanese"
  language_ainu_name:0 "Ainu"
  language_vietnamese_name:0 "Vietnamese"
