Fixed some cultural localizations.

--- a/localization/english/culture/traditions/eastern_heritages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_heritages_l_english.yml
@@ -3,8 +3,8 @@
  heritage_gypsy_collective_noun:0 "Romani"
  heritage_japanese_name:0 "Japanese"
  heritage_japanese_collective_noun:0 "Japanese"
- heritage_ainu_name:0 "Japanese"
- heritage_ainu_collective_noun:0 "Japanese"
+ heritage_ainu_name:0 "Ainu"
+ heritage_ainu_collective_noun:0 "Ainu"
  heritage_vietnamese_name:0 "Vietnamese"
  heritage_vietnamese_collective_noun:0 "Vietnamese"
  heritage_tai_name:0 "Tai"
