--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -4,8 +4,12 @@
  language_japanese_name:0 "Japanese"
  language_ainu_name:0 "Ainu"
  language_vietnamese_name:0 "Vietnamese"
- heritage_tai_name:0 "Tai"
- heritage_monkhmer:0 "Mon-Khmer"
- heritage_mon:0 "Mon"
- heritage_khmer:0 "Khmer"
- heritage_korean:0 "Korean"
+ language_tai_name:0 "Tai"
+ language_monkhmer_name:0 "Mon-Khmer"
+ language_mon_name:0 "Mon"
+ language_khmer_name:0 "Khmer"
+ language_korean_name:0 "Korean"
+ language_malay_name:0 "Malay"
+ language_cham_name:0 "Cham"
+ language_javanese_name:0 "Javanese"
+ language_achenese_name:0 "Aceh"
