--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -1,4 +1,17 @@
 ﻿l_english:
+ chinese_clothing_gfx:0 "Chinese"
+ name_list_korean:0 "Korean"
+ name_list_japanese:0 "Japanese"
+ name_list_ainu:0 "Ainu"
+ name_list_malay:0 "Malay"
+ name_list_javanese:0 "Javanese"
+ name_list_cham:0 "Cham"
+ name_list_achenese:0 "Achanese"
+ name_list_vietnamese:0 "Vietnamese"
+ name_list_thai:0 "Thai"
+ name_list_khmer:0 "Khmer"
+ name_list_han:0 "Mandarin"
+ name_list_cantonese:0 "Cantonese"
  japanese_group:0 "Japanese"
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
