--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -1,6 +1,12 @@
 ﻿l_english:
- language_west_iranian_name:0 "Western Iranian"
- language_east_iranian_name:0 "Eastern Iranian"
+ language_west_iranian_name:0 "Pahlavi"
+ language_central_iranian_name:0 "Farsi"
+ language_north_iranian_name:0 "Soghdian"
+ language_east_iranian_name:0 "Sharqi"
+ name_list_saka:0 "Sharqi"
+ saka:0 "Sharqi"
+ saka_prefix:0 "Sharqi"
+ saka_collective_noun:1 "Sharqi"
  language_japanese_name:0 "Japanese"
  language_ainu_name:0 "Ainu"
  language_vietnamese_name:0 "Vietnamese"
