--- a/localization/english/culture/traditions/eastern_traditions_l_english.yml
+++ b/localization/english/culture/traditions/eastern_traditions_l_english.yml
@@ -1,4 +1,4 @@
 ﻿l_english: 
  # Traditions
  tradition_bushido_name:0 "Bushido"
- tradition_bushido_eunuchs_desc:1 "Bushidō - Japanese for \"Way of the Warrior\" - was the set of codes of honour and ideals originating in Confucian, Zen Buddhist and Shinto teachings, that dictated the samurai way of life, loosely analogous to the European concept of chivalry."
+ tradition_bushido_desc:1 "Bushidō - Japanese for \"Way of the Warrior\" - was the set of codes of honour and ideals originating in Confucian, Zen Buddhist and Shinto teachings, that dictated the samurai way of life, loosely analogous to the European concept of chivalry."
