Makeshift learn sacred language.

--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -19,3 +19,6 @@
  language_cham_name:0 "Cham"
  language_javanese_name:0 "Javanese"
  language_achenese_name:0 "Aceh"
+ language_avestan_name:0 "Avestan"
+ language_hebrew:0 "Hebrew"
+ language_sanskrit:0 "Sanskrit"
