Further refinements in autogeneration of religious localizations.

--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -20,5 +20,6 @@
  language_javanese_name:0 "Javanese"
  language_achenese_name:0 "Aceh"
  language_avestan_name:0 "Avestan"
- language_hebrew:0 "Hebrew"
- language_sanskrit:0 "Sanskrit"
+ language_hebrew_name:0 "Hebrew"
+ language_sanskrit_name:0 "Sanskrit"
+ language_coptic_name:0 "Coptic"
