Created scheme for learning sacred language.

--- a/localization/english/religion/far_eastern_doctrines_l_english.yml
+++ b/localization/english/religion/far_eastern_doctrines_l_english.yml
@@ -1,4 +1,24 @@
 ﻿l_english: 
+ learn_sacred_language_interaction:0 "Learn Sacred Language #weak (Scheme)#!"
+ learn_sacred_language_interaction_notification:0 "Learn Sacred Language"
+ learn_sacred_language_outcome.1.t:1 "$learn_language$: Success!"
+ learn_sacred_language_outcome.1.desc:3 "After lots of hard work I've finally learned the sacred language of our faith!"
+ learn_sacred_language_outcome.2.t:1 "$learn_language$: Failure"
+ learn_sacred_language_outcome.2.desc:3 "After lots of hard work... nothing! It is #EMP impossible#! to learn the sacred language. No matter how hard I try, I speak like a barely-weaned babe and write like an unlettered, blind serf who's missing most of their fingers!\n\nBah! This was a waste of time..."
+ learn_sacred_language:1 "Learn Sacred Language"
+ learn_sacred_language_action:0 "Learn Sacred Langauge"
+ learn_sacred_language_desc:1 "I will attempt to learn the sacred language of my faith."
+ learn_sacred_language_desc_general:2 "The Learn Sacred Language [scheme|E] is a [personal_scheme|E] where you try to learn the holy [language|E] your faith."
+ scheme_interaction_tt_learn_sacred_language_approved:1 "Attempt to learn the sacred language of your faith.\n\n#weak Current [language_limit|E]: [actor.MakeScope.ScriptValue('current_extra_languages')|V0] out of [actor.MakeScope.ScriptValue('language_soft_cap')|V0]#!"
+ learn_sacred_language_learn_language_success_message:0 "Language Learned"
+ learn_sacred_language_learn_language_failed_message:0 "Failed to Learn Language"
+ scheme_interaction_tt_learn_language_desc:0 "I will learn the sacred [language|E]!"
+ learn_sacred_language_invalidated_cannot_learn_language_desc:0 "You can no longer learn the sacred [language|E]"
+ learn_sacred_language_invalidated:0 "$learn_language$ Invalidated"
+ learn_sacred_language_invalidated_dead_desc:0 "[target.GetShortUIName|U] has passed away. You can no longer use the $learn_language$ on [target.GetHerHim]."
+ learn_sacred_language_complete:1 "You have learned the holy [language|E]"
+ learn_sacred_language_invalidated_title:0 "@scheme_icon! $learn_language$ Ends"
+ LEARN_SACRED_LANGUAGE_SUCCESS_DESC:2 "You learn your faith's [language|E]\n#weak Current [language_limit|E]: [CHARACTER.MakeScope.ScriptValue('current_extra_languages')|V0] out of [CHARACTER.MakeScope.ScriptValue('language_soft_cap')|V0]#!"
  rf_mazdan:0 "Mazdaic"
  turan_tolerance_name:0 "Turanian Brotherhood"
  turan_tolerance_desc:0 "We may have dispersed into many far away lands since time immemorial, we still won't forget about our ancient blood ties."
@@ -73,9 +93,9 @@
  
  # Language
  doctrine_sacred_language_name:0 "Sacred Language"
- doctrine_sacred_language_desc:0 "In what tongue, are our holy scriptures written? In what tongue, do we spread the word to the masses?"
+ doctrine_sacred_language_desc:0 "In what [language|e], are our holy scriptures written? In what [language|e], do we spread the word to the masses?"
  sacred_lang_none_name:0 "Vernacular"
- sacred_lang_none_desc:0 "We refuse to keep the true word away from the masses - we preach in our vernacular, and we either transmit the faith through oral tradition, or if we have a written holy scripture, we make it our priority to translate it to the language of the masses."
+ sacred_lang_none_desc:0 "We refuse to keep the true word away from the masses - we preach in our vernacular, and we either transmit the faith through oral tradition, or if we have a written holy scripture, we make it our priority to translate it to the [language|e] of the masses."
  # Syncretism doctrines
  doctrine_syncretism_name:0 "Syncretism & Orthodoxy"
  doctrine_syncretism_desc:0 "Do we keep to ourselves, or do we open ourselves up for dialogue with the heathens?"
