--- a/localization/english/religion/sacred_language_doctrines_l_english.yml
+++ b/localization/english/religion/sacred_language_doctrines_l_english.yml
@@ -1,21 +1,21 @@
 ﻿l_english:
  sacred_lang_latin_name:0 "$language_latin_name$"
- sacred_lang_latin_desc:0 "Our faith's sacred language is [GetLanguage('language_latin').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_latin_desc:0 "Our faith's sacred [language|e] is $language_latin_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_greek_name:0 "$language_greek_name$"
- sacred_lang_greek_desc:0 "Our faith's sacred language is [GetLanguage('language_greek').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_greek_desc:0 "Our faith's sacred [language|e] is $language_greek_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_sanskrit_name:0 "$language_sanskrit_name$"
- sacred_lang_sanskrit_desc:0 "Our faith's sacred language is [GetLanguage('language_sanskrit').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_sanskrit_desc:0 "Our faith's sacred [language|e] is $language_sanskrit_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_hebrew_name:0 "$language_hebrew_name$"
- sacred_lang_hebrew_desc:0 "Our faith's sacred language is [GetLanguage('language_hebrew').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_hebrew_desc:0 "Our faith's sacred [language|e] is $language_hebrew_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_arabic_name:0 "$language_arabic_name$"
- sacred_lang_arabic_desc:0 "Our faith's sacred language is [GetLanguage('language_arabic').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_arabic_desc:0 "Our faith's sacred [language|e] is $language_arabic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_avestan_name:0 "$language_avestan_name$"
- sacred_lang_avestan_desc:0 "Our faith's sacred language is [GetLanguage('language_avestan').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_avestan_desc:0 "Our faith's sacred [language|e] is $language_avestan_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_aramaic_name:0 "$language_aramaic_name$"
- sacred_lang_aramaic_desc:0 "Our faith's sacred language is [GetLanguage('language_aramaic').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_aramaic_desc:0 "Our faith's sacred [language|e] is $language_aramaic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_coptic_name:0 "$language_coptic_name$"
- sacred_lang_coptic_desc:0 "Our faith's sacred language is [GetLanguage('language_coptic').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_coptic_desc:0 "Our faith's sacred [language|e] is $language_coptic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_tibetan_name:0 "$language_tibetan_name$"
- sacred_lang_tibetan_desc:0 "Our faith's sacred language is [GetLanguage('language_tibetan').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_tibetan_desc:0 "Our faith's sacred [language|e] is $language_tibetan_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
  sacred_lang_slavonic_name:0 "$language_slavonic_name$"
- sacred_lang_slavonic_desc:0 "Our faith's sacred language is [GetLanguage('language_slavonic').GetName] - it is the tongue in which all that is holy is to be written down and preached to the masses."
+ sacred_lang_slavonic_desc:0 "Our faith's sacred [language|e] is $language_slavonic_name$ - it is the tongue in which all that is holy is to be written down and preached to the masses."
