New common language for Magyars and Khanty.

--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -23,3 +23,4 @@
  language_hebrew_name:0 "Hebrew"
  language_sanskrit_name:0 "Sanskrit"
  language_coptic_name:0 "Coptic"
+ language_ugric_name:0 "Ugric"
