Added Mizrahim and Beta Israeli Jews.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -17,6 +17,8 @@
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
  japanese_collective_noun:0 "Yamato"
+ mizrahi:0 "Mizrahi"
+ mizrahi_collective_noun:0 "Mizrahim"
  ainu:0 "Aynu"
  ainu_collective_noun:0 "Aynus"
  baiyue_group:0 "Baiyue"
@@ -29,6 +31,8 @@
  korean_collective_noun:0 "Goryeo-in"
  chinese_group:0 "Chinese"
  chinese_group_collective_noun:0 "Chinese"
+ beta_israeli:0 "Beta Israeli"
+ beta_israeli_collective_noun:0 "Beta Israeli"
  han:0 "Hànrén"
  han_collective_noun:0 "Hànrén"
  kaifeng_jew:0 "Yóutàirén"
