In the process of adding new cultures.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -13,6 +13,9 @@
  name_list_khmer:0 "Khmer"
  name_list_han:0 "Mandarin"
  name_list_cantonese:0 "Cantonese"
+ name_list_albanian:0 "Albanian"
+ name_list_coptic:0 "Coptic"
+ name_list_gothic:0 "Gothic"
  japanese_group:0 "Japanese"
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
