--- a/localization/english/religion/far_eastern_holy_sites_l_english.yml
+++ b/localization/english/religion/far_eastern_holy_sites_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ holy_site_tarnovo_name: "Tǎrnovo"
  holy_site_socotra_name: "Socotra"
  holy_site_maldives_name: "Maldivia"
  holy_site_dakhina_desa_name: "Dakhina Desa"
