--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -20,6 +20,8 @@
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
  japanese_collective_noun:0 "Yamato"
+ coptic:0 "Qubt"
+ coptic_collective_noun:0 "Qubt"
  mizrahi:0 "Mizrahi"
  mizrahi_collective_noun:0 "Mizrahim"
  ainu:0 "Aynu"
