Coptic culture and Ethiopian Orthodoxy added.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -19,34 +19,45 @@
  japanese_group:0 "Japanese"
  japanese_group_collective_noun:0 "Japanese"
  japanese:0 "Yamato"
+ japanese_prefix:0 "Japo"
  japanese_collective_noun:0 "Yamato"
- coptic:0 "Qubt"
- coptic_collective_noun:0 "Qubt"
+ egyptian_copt:0 "Remənkhēmi"
+ egyptian_copt_prefix:0 "Remənkhēmi"
+ egyptian_copt_collective_noun:0 "Niremənkhēmi"
  mizrahi:0 "Mizrahi"
+ mizrahi_prefix:0 "Mizrahi"
  mizrahi_collective_noun:0 "Mizrahim"
  ainu:0 "Aynu"
+ ainu_prefix:0 "Aynu"
  ainu_collective_noun:0 "Aynus"
  baiyue_group:0 "Baiyue"
  baiyue_group_collective_noun:0 "Baiyue"
  vietnamese:0 "Người Việt"
+ vietnamese_prefix:0 "Việt"
  vietnamese_collective_noun:0 "Người Việt"
  korean_group:0 "Goguryeo"
  korean_group_collective_noun:0 "Goguryeo"
  korean:0 "Goryeo-in"
+ korean_prefix:0 "Korean"
  korean_collective_noun:0 "Goryeo-in"
  chinese_group:0 "Chinese"
  chinese_group_collective_noun:0 "Chinese"
  beta_israeli:0 "Beta Israeli"
+ beta_israeli_prefix:0 "Beta"
  beta_israeli_collective_noun:0 "Beta Israeli"
  han:0 "Hànrén"
  han_collective_noun:0 "Hànrén"
  kaifeng_jew:0 "Yóutàirén"
+ kaifeng_jew_prefix:0 "Kaifeng"
  kaifeng_jew_collective_noun:0 "Yóutàirén"
  cantonese:0 "Yuhtyàhn"
+ cantonese_prefix:0 "Canto-"
  cantonese_collective_noun:0 "Yuhtyàhn"
  azeri_turkish:1 "Azëri"
+ azeri_turkish_prefix:1 "Azëri"
  azeri_turkish_collective_noun:2 "Azërilər"
  anatolian_turkish:1 "Türk"
+ anatolian_turkish_prefix:1 "Turco"
  anatolian_turkish_collective_noun:2 "Türkler"
  austronesian_group:0 "Austronesian"
  austronesian_group_collective_noun:0 "Austronesian"
@@ -204,16 +215,23 @@
  prince_female_thai:0 "Chaoying"
  prince_female_khmer:0 "Anakaangkomcheasa"
  malay:0 "Malay"
+ malay_prefix:0 "Malayo"
  malay_collective_noun:0 "Malay"
  achenese:0 "Achenese"
+ achenese_prefix:0 "Acheno-"
  achenese_collective_noun:0 "Achenese"
  javanese:0 "Javanese"
+ javanese_prefix:0 "Java"
  javanese_collective_noun:0 "Javanese"
  batak:0 "Batak"
+ batak_prefix:0 "Batak"
  batak_collective_noun:0 "Batak"
  cham:0 "Cham"
+ cham_prefix:0 "Cham"
  cham_collective_noun:0 "Cham"
  thai:0 "Thai"
+ thai_prefix:0 "Thai"
  thai_collective_noun:0 "Thai"
  khmer:0 "Khmêr"
+ khmer_prefix:0 "Khmêr"
  khmer_collective_noun:0 "Khmêr"
