--- a/localization/english/religion/religion_protestant_l_english.yml
+++ b/localization/english/religion/religion_protestant_l_english.yml
@@ -1,4 +1,9 @@
 ﻿l_english:
+ tewahedo:0 "Täwahedo"
+ tewahedo_adj:0 "Täwahedo"
+ tewahedo_adherent:0 "Täwahedo"
+ tewahedo_adherent_plural:0 "Täwahedo"
+ tewahedo_desc:0 "Täwaḥədo is a Ge'ez word meaning 'being made one' or 'unified'. This word refers to the Oriental Orthodox belief in the one composite unified nature of Christ; i.e., a belief that a complete, natural union of the divine and human natures into one is self-evident in order to accomplish the divine salvation of humankind. This is in contrast to the 'two natures of Christ' belief (unmixed, but unseparated divine and human natures, called the hypostatic union) which is held by the Catholic Church and the Eastern Orthodox Church."
  slavic_christian:0 "Pravoslavije"
  slavic_christian_adj:0 "Pravoslaven"
  slavic_christian_adherent:0 "Pravoslav"
