Crimean Gothic culture added.

--- a/localization/english/culture/feastern_cultures_l_english.yml
+++ b/localization/english/culture/feastern_cultures_l_english.yml
@@ -21,6 +21,12 @@
  japanese:0 "Yamato"
  japanese_prefix:0 "Japo"
  japanese_collective_noun:0 "Yamato"
+ gothic:0 "Gutþisk"
+ gothic_prefix:0 "Gotho"
+ gothic_collective_noun:0 "Gutþiuda"
+ albanian:0 "Albanian"
+ albanian_prefix:0 "Albano"
+ albanian_collective_noun:0 "Albanian"
  egyptian_copt:0 "Remənkhēmi"
  egyptian_copt_prefix:0 "Remənkhēmi"
  egyptian_copt_collective_noun:0 "Niremənkhēmi"
