--- a/localization/english/culture/traditions/eastern_languages_l_english.yml
+++ b/localization/english/culture/traditions/eastern_languages_l_english.yml
@@ -24,3 +24,5 @@
  language_sanskrit_name:0 "Sanskrit"
  language_coptic_name:0 "Coptic"
  language_ugric_name:0 "Ugric"
+ language_albanian_name:0 "Albanian"
+ language_gothic_name:0 "Gothic"
